package com.escom.papelio.model;

import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.data.annotation.CreatedDate;
import org.springframework.data.jpa.domain.support.AuditingEntityListener;

import java.time.LocalDateTime;

@Entity
@Table(name = "article_favorites", uniqueConstraints = {
    @UniqueConstraint(columnNames = {"userEmail", "articleId"})
})
@Data
@NoArgsConstructor
@AllArgsConstructor
@EntityListeners(AuditingEntityListener.class)
public class ArticleFavorite {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(nullable = false)
    private String title;

    @Column(nullable = false)
    private String userEmail;

    @Column(nullable = false)
    private String articleId;
    
    @CreatedDate
    @Column(nullable = false, updatable = false)
    private LocalDateTime favoriteDate;
}
